...
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_below="@id/findPromptsTextView"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@id/emailTextView"
        android:layout_marginTop="8dp"/>

...
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="28dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_below="@id/passwordTextView"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="24dp"
        android:background="@android:color/black"
...
